编写个人中心页面、订单列表页面

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ flutter:
       - images/orange.png
       - images/milk.png
       - images/KFC.png
+      - images/order.png
+      - images/rightArrow.png
+      - images/recommend.png
+      - images/setting.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
