--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,11 @@ dependencies:
     sdk: flutter
   english_words: ^3.1.0
   flutter_swiper: ^1.1.6
+  video_player: 0.10.1+5
+  chewie: 0.9.7
+  auto_orientation: ^0.0.2
+  dio: 2.1.13
+  path_provider: 1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
