--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   auto_orientation: ^0.0.2
   dio: 2.1.13
   path_provider: 1.2.0
+  provider: ^3.0.0+1
+  shared_preferences: ^0.5.3+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
