--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path_provider: 1.2.0
   provider: ^3.0.0+1
   shared_preferences: ^0.5.3+4
+  connectivity: ^0.4.3+6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -57,6 +58,7 @@ flutter:
       - images/rightArrow.png
       - images/recommend.png
       - images/setting.png
+      - images/logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
